<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/appSettingsMenuItem"
            android:icon="@drawable/ic_settings"
            android:title="Setari"/>

        <item
            android:id="@+id/howToPagePatientMenuItem"
            android:icon="@drawable/ic_help_outline"
            android:title="@string/how_to_use_menu_label" />
        <item
            android:id="@+id/aboutAppMenuItem"
            android:icon="@drawable/ic_info_outline"
            android:title="@string/contact_menu_label" />

        <item
            android:id="@+id/signOutMenuItem"
            android:icon="@drawable/ic_power_settings_new"
            android:title="@string/sign_out_menu_label" />

        <item
            android:id="@+id/exitAppMenuItem"
            android:icon="@drawable/ic_exit_to_app"
            android:title="@string/exit_menu_label" />

    </group>

    <item android:title="@string/communicateTitle">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_fb"
                android:icon="@drawable/ic_star"
                android:title="Facebook" />
            <item
                android:id="@+id/nav_gmail"
                android:icon="@drawable/ic_email"
                android:title="Gmail" />
        </menu>
    </item>

</menu>
