<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mario22gmail.vasile.studentist.patient.PatientAddRequest">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        >

        <android.support.v7.widget.Toolbar
            android:id="@+id/PatientAddRequestToolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </android.support.v7.widget.Toolbar>

        <ImageView
            android:id="@+id/add_request_img_type"
            android:layout_width="@dimen/add_request_icon_size"
            android:layout_height="@dimen/add_request_icon_size"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:scaleType="centerCrop"
            android:src="@drawable/imgcontrol"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/PatientAddRequestToolbar" />


        <TextView
            android:id="@+id/add_request_type_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"

            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:gravity="center_vertical"
            android:text="@string/requestCariType"
            android:textSize="@dimen/add_requst_description_text_size"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_request_img_type" />


        <Button
            android:id="@+id/pacientSendRequestButton"
            android:layout_width="162dp"
            android:layout_height="41dp"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/roundbuttoncategoryiconsstyle"
            android:text="@string/add_request_send_button_text"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_request_Info_TextLayout" >
            <requestFocus />
        </Button>

        <TextView
            android:id="@+id/textView10"
            android:layout_width="324dp"
            android:layout_height="50dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:text="@string/add_request_description"
            android:textSize="16sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_request_type_description_label" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_request_Name_TextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:theme="@style/TextLabel"
            app:errorEnabled="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView10">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/add_request_Name_EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/create_account_name_label"
                android:imeOptions="actionNext"
                android:inputType="textNoSuggestions"
                android:lines="1" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_request_Info_TextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:theme="@style/TextLabel"
            app:errorEnabled="true"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_request_Tel_TextLayout">

            <EditText
                android:id="@+id/add_request_Info_EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/add_request_extra_info_label"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:lines="3"
                android:maxLength="120"
                android:maxLines="3"
                android:scrollHorizontally="false" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/add_request_Tel_TextLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:theme="@style/TextLabel"
            app:errorEnabled="true"
            app:layout_constraintHorizontal_bias="0.523"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/add_request_Name_TextLayout">

            <android.support.v7.widget.AppCompatEditText
                android:id="@+id/add_request_pacient_tel_EditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/add_request_tel_label"
                android:inputType="number"
                android:paddingBottom="8dp"
                android:paddingTop="16dp" />
        </android.support.design.widget.TextInputLayout>


    </android.support.constraint.ConstraintLayout>
</ScrollView>