<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mario22gmail.vasile.studentist.patient.PatientChooseOptionsActivity">


    <android.support.constraint.Guideline
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_percent=".5"
        android:id="@+id/guideline2" />

    <ImageView
        android:id="@+id/cariiOptionImageView"
        android:layout_width="@dimen/requestcategoryiconwidth"
        android:layout_height="@dimen/requestcategoryconheight"
        app:srcCompat="@drawable/imgcontrol"
        android:scaleType="centerCrop"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/textViewPatientChooseRequestTypeMainTextView"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"/>

    <ImageView
        android:id="@+id/DurereOptionImageView"
        android:layout_width="@dimen/requestcategoryiconwidth"
        android:layout_height="@dimen/requestcategoryconheight"
        app:srcCompat="@drawable/imgdurere"
        android:scaleType="centerCrop"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewPatientChooseRequestTypeMainTextView"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2" />

    <ImageView
        android:id="@+id/IgienizareOptionImageView"
        android:layout_width="@dimen/requestcategoryiconwidth"
        android:layout_height="@dimen/requestcategoryconheight"
        app:srcCompat="@drawable/imgigienizare"
        android:scaleType="centerCrop"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"

        android:layout_marginStart="8dp"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginRight="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/cariiOptionLabelTextView" />

    <ImageView
        android:id="@+id/ProteticaOptionImageView"
        android:layout_width="@dimen/requestcategoryiconwidth"
        android:layout_height="@dimen/requestcategoryconheight"
        app:srcCompat="@drawable/imgprotetica"
        android:scaleType="centerCrop"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:clickable="true"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/durereRequestLabelTextView" />

    <TextView
        android:id="@+id/IgienizareRequestLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/requestCleaningType"
        android:textSize="@dimen/requestoptiontextsize"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/IgienizareOptionImageView"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/cariiOptionLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/requestCariType"
        android:textSize="@dimen/requestoptiontextsize"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/cariiOptionImageView"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/guideline2"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.504" />

    <TextView
        android:id="@+id/durereRequestLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:gravity="center"
        android:text="@string/requestPainType"
        android:textSize="@dimen/requestoptiontextsize"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/DurereOptionImageView"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/ProteticaRequestLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/requestMissingToothType"
        android:textSize="@dimen/requestoptiontextsize"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/ProteticaOptionImageView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintVertical_bias="0.0" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbarChooseRequestType"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="-2dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <TextView
        android:id="@+id/textViewPatientChooseRequestTypeMainTextView"
        android:textSize="26sp"
        android:layout_width="337dp"
        android:layout_height="44dp"
        android:text="@string/chooseRequestTypeLabel"
        android:gravity="center"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbarChooseRequestType"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />

</android.support.constraint.ConstraintLayout>
